# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.672 2009/11/15 13:04:38 mpagano Exp $

*git-sources-2.6.32_rc7-r1 (15 Nov 2009)

  15 Nov 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.32_rc7-r1.ebuild:
  Version bump

  13 Nov 2009; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.32_rc5-r1.ebuild, -git-sources-2.6.32_rc5-r2.ebuild,
  -git-sources-2.6.32_rc5-r3.ebuild, -git-sources-2.6.32_rc5-r4.ebuild,
  -git-sources-2.6.32_rc5-r5.ebuild, -git-sources-2.6.32_rc5-r6.ebuild:
  Old version cleanup

*git-sources-2.6.32_rc6-r6 (13 Nov 2009)

  13 Nov 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.32_rc6-r6.ebuild:
  Version bump

*git-sources-2.6.32_rc6-r5 (12 Nov 2009)

  12 Nov 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.32_rc6-r5.ebuild:
  Version bump

*git-sources-2.6.32_rc6-r4 (10 Nov 2009)

  10 Nov 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.32_rc6-r4.ebuild:
  Version bump

*git-sources-2.6.32_rc6-r3 (06 Nov 2009)

  06 Nov 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.32_rc6-r3.ebuild:
  Version bump

*git-sources-2.6.32_rc6-r1 (04 Nov 2009)

  04 Nov 2009; Mike Pagano <mpagano@gentoo.org>
  -git-sources-2.6.32_rc3-r1.ebuild, -git-sources-2.6.32_rc3-r2.ebuild,
  -git-sources-2.6.32_rc3-r3.ebuild, -git-sources-2.6.32_rc4-r1.ebuild,
  -git-sources-2.6.32_rc4-r2.ebuild, -git-sources-2.6.32_rc4-r3.ebuild,
  -git-sources-2.6.32_rc4-r4.ebuild, -git-sources-2.6.32_rc4-r5.ebuild,
  +git-sources-2.6.32_rc6-r1.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.32_rc5-r6 (03 Nov 2009)

  03 Nov 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.32_rc5-r6.ebuild:
  Version bump

*git-sources-2.6.32_rc5-r5 (01 Nov 2009)

  01 Nov 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.32_rc5-r5.ebuild:
  Version bump
