@@ -6,6 +6,7 @@ DIST patch-2.6.32-rc6-git5.bz2 138267 RMD160 58c06cba6fdfac0657587d5123d7c274f98
 DIST patch-2.6.32-rc6-git6.bz2 148583 RMD160 6aa034ce23ac22de9211b55036bed106ed5bc2d0 SHA1 d1526a3ae033d9b2959bbc28db3f3560988a5cc8 SHA256 29b15d53f1a932e5643a93647c6a4439416d1d35f5f2053ab635ed51d73d69e6
 DIST patch-2.6.32-rc6.bz2 11308185 RMD160 c47856f681222f061995cab31809655c1d34f594 SHA1 50b54248763d08c6b00d9ea6c0e211843f41a1f7 SHA256 8741d7bfec9f465263d951b5515ffc472031d037f6ac29d21f245c493bf69f59
 DIST patch-2.6.32-rc7-git1.bz2 15292 RMD160 911492518ae7299fbd842cb0b8fa740e55443c0c SHA1 828f1c9402f8710d82f2a4729532f0b100a1e8fe SHA256 75852599410453ac3642376ea1a71775e05469c8de8ca1d9f212fd44835526fc
+DIST patch-2.6.32-rc7-git2.bz2 34667 RMD160 3e72ee7251b7ca38c6331043b1c3ea6604a292bd SHA1 a09efa2ec699dd1e098dcfb8bf3e077ab79bc965 SHA256 e71e7221d82b8626d022a765f65c9352779b8dc74016788cf6006aa61e449519
 DIST patch-2.6.32-rc7.bz2 11404261 RMD160 2570e25e7df208ea71468b1d0155b283310142b0 SHA1 5ce86c2260cbeea120ed336966f4ef75e66f119e SHA256 f4814707d648b570b06d06e0763e8cf3fe8932b467e320d9e42689804ec71a3b
 EBUILD git-sources-2.6.32_rc6-r1.ebuild 1246 RMD160 1841c1cc81d56bfd7d66d4a063b25f442dc109ff SHA1 d5c2920f13e19f32e85bada2224681acea9466c1 SHA256 bc1afc4ad3cf6aaffc676d1fe8b2b801a501de8ac412e7f501b27d8f690c4203
 EBUILD git-sources-2.6.32_rc6-r3.ebuild 1246 RMD160 f64e46cd62dcd1b68cb7e68d47e2da7d90376802 SHA1 bb0ddf85e22981d187d3fa3fe7b33696016df0e4 SHA256 dde2c682af005c25ae91abf9023cea23c8d291934d07fed5f6a5e2771c084f25
@@ -13,5 +14,6 @@ EBUILD git-sources-2.6.32_rc6-r4.ebuild 1246 RMD160 dc03fd2c1a660a9040babf539afc
 EBUILD git-sources-2.6.32_rc6-r5.ebuild 1246 RMD160 72fc01e7ff45638822f87ab155daa540c1621414 SHA1 d7a5863d103eeffe3adf1ca5d10fb51d7bb1fa35 SHA256 ab5916f03b8cf662c3741edb8ad131ffa93900c82de79eaf54e43813015886c1
 EBUILD git-sources-2.6.32_rc6-r6.ebuild 1246 RMD160 e48c3f055238b4d692644520aafe89478078c06f SHA1 ae8b542fe494949bb3c62546c64b3ee156039599 SHA256 b2a4f4ca227a3f53ec677d692ea9d64a69cb7edd22d55052a6e0dd20b3517855
 EBUILD git-sources-2.6.32_rc7-r1.ebuild 1246 RMD160 3ff5a80525055e3eb005018bdc706ee3727a4ca9 SHA1 81db4007c0461e3a892ad5afc19cad7541898c69 SHA256 be34b8c965f38ac69029d0317484461d340652e0876479f3026b75206f3df13c
-MISC ChangeLog 128469 RMD160 b92c740b890dcc0414fefed34b50b7d6dca42c2e SHA1 fc8faf2c74b672472038bf1534c3e0f9e8e20914 SHA256 27cf748b123c83d8d5cac5a981fd94c37eefebd23b33cd2d266ba272a57d6114
+EBUILD git-sources-2.6.32_rc7-r2.ebuild 1246 RMD160 8013c6e43900a552a92aa968ddadb9a5122deda6 SHA1 62070d73d2cd2a7a7d337a3887dd107ec5ff1778 SHA256 0e2665818552b9928d79b4abfc0650598cae2ba8fb95fb5e27daaab4079e6aa9
+MISC ChangeLog 128612 RMD160 57fd482f7c0becc96e0d3823713e7d735bc1d701 SHA1 e31fd22c9f3fcb4f9d3a87c6171903ba0c0dc194 SHA256 328c9d6ad8475facd145f9b23b9ddf023ebf76d64680d7977535d14d46017899
 MISC metadata.xml 443 RMD160 2b491a6310ff59f0658f64be1328b983ac82a462 SHA1 a65b3e97b9088758114ce0dbb46abb15879211e0 SHA256 9232689e2d3a60e31b4b0194770e6395613a110b77bef2f4e2f98d919acbaf13
