@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.672 2009/11/15 13:04:38 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.673 2009/11/18 13:04:58 mpagano Exp $
+
+*git-sources-2.6.32_rc7-r2 (18 Nov 2009)
+
+  18 Nov 2009; Mike Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.32_rc7-r2.ebuild:
+  Version bump
 
 *git-sources-2.6.32_rc7-r1 (15 Nov 2009)
 
